A35_Python_for_DS กิจกรรมที่ 4.1 Descriptive Statistic

--- a/A35_Python_for_DS กิจกรรมที่ 4.1 Descriptive Statistic.ipynb
+++ b/A35_Python_for_DS กิจกรรมที่ 4.1 Descriptive Statistic.ipynb
@@ -4002,7 +4002,7 @@
         "\n",
         "1. ค่าเฉลี่ยของวิชา วิทยาศาสตร์\tมีค่าเท่ากับ 50.128\n",
         "2. มัธยฐานของวิชา ภาษาไทย มีค่าเท่ากับ 61.0\n",
-        "3. ฐานนิยมของวิชา ภาษาอังกฤษ มีค่าเท่ากับ 59.5\n",
+        "3. ฐานนิยมของวิชา ภาษาอังกฤษ มีค่าเท่ากับ 59.5 (59, 60)\n",
         "4. ค่ามากที่สุดของวิชาคณิตศาสตร์ มีค่าเท่ากับ 90.000\n",
         "5. ค่าน้อยที่สุดของวิชาภาษาอังกฤษ มีค่าเท่ากับ 14.000\n",
         "6. ควอไทล์ที่ 3 ของ วิชาวิทยาศาสตร์ มีค่าเท่ากับ 58.000\n",
@@ -4034,17 +4034,43 @@
         "\n",
         "#หาค่าเฉลี่ยคะแนนวิชาภาษาอังกฤษของนักเรียนหญิง \n",
         "dfFemale= df[df.sex=='F'].mean(axis=0)     #แก้ไขโค้ดบรรทัดนี้\n",
-        "print(dfFemale['__'].round(3))              #แก้ไขโค้ดบรรทัดนี้\n",
+        "print(dfFemale['english'].round(3))              #แก้ไขโค้ดบรรทัดนี้\n",
         "\n",
         "#หาค่าเฉลี่ยคะแนนวิชาวิทยาศาสตร์ของนักเรียนห้อง EP \n",
-        "dfEP=df[df.program=='__'].mean(axis=0)       #แก้ไขโค้ดบรรทัดนี้\n",
-        "print(dfEP['__'].round(3))                   #แก้ไขโค้ดบรรทัดนี้\n"
+        "dfEP=df[df.program=='EP'].mean(axis=0)       #แก้ไขโค้ดบรรทัดนี้\n",
+        "print(dfEP['science'].round(3))                   #แก้ไขโค้ดบรรทัดนี้\n"
       ],
       "metadata": {
-        "id": "zL21CHp2hW7V"
+        "id": "zL21CHp2hW7V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a8680178-f606-4301-efc9-93ab8395ed8b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "47.416\n",
+            "53.069\n",
+            "44.88\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+            "  \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:6: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+            "  \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:10: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+            "  # Remove the CWD from sys.path while we load stuff.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4052,9 +4078,9 @@
         "### ตอนที่ 2 ตอบคำถามต่อไปนี้\n",
         "\n",
         "\n",
-        "1. เฉลี่ยคะแนนวิชาคณิตศาสตร์ของนักเรียนชาย\tมีค่าเท่ากับ …....\n",
-        "2. ค่าเฉลี่ยคะแนนวิชาภาษาอังกฤษของนักเรียนหญิง มีค่าเท่ากับ …....\n",
-        "3. ค่าเฉลี่ยคะแนนวิชาวิทยาศาสตร์ของนักเรียนห้อง EP มีค่าเท่ากับ …...\n",
+        "1. เฉลี่ยคะแนนวิชาคณิตศาสตร์ของนักเรียนชาย\tมีค่าเท่ากับ 47.416\n",
+        "2. ค่าเฉลี่ยคะแนนวิชาภาษาอังกฤษของนักเรียนหญิง มีค่าเท่ากับ 53.069\n",
+        "3. ค่าเฉลี่ยคะแนนวิชาวิทยาศาสตร์ของนักเรียนห้อง EP มีค่าเท่ากับ 44.88\n",
         "\n",
         "\n"
       ],
